Bug 118049 - Style "Title" doubles text if selected after writing the text. The problem disappears after pressing the Enter key
Summary: Style "Title" doubles text if selected after writing the text. The problem di...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
: 118839 (view as bug list)
Depends on:
Blocks: Writer-Styles-Paragraph Regressions-WriterMultiListener
  Show dependency treegraph
 
Reported: 2018-06-07 09:15 UTC by Jesper Korsholm Brogaard
Modified: 2022-04-22 09:38 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screen recording, showing how to reproduce the error (616.00 KB, video/mp4)
2018-06-07 09:29 UTC, Jesper Korsholm Brogaard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jesper Korsholm Brogaard 2018-06-07 09:15:53 UTC
Description:
If you select "Title", the text remains to the left while a formatted Title is shown (aligned to the centre, bold). the left aligned text is not accessible.

The problem disappears after pressing the Enter key.

Steps to Reproduce:
1. Open new Writer document
2. Write some text, e.g. "This is the title"
3. Select the style "Title"
4. Move the cursor to the end of the text and press the Enter key

Actual Results:  
"This is the title" is shown twice, without and with the formatting defined by the style.

The problem disappears after pressing the Enter key

Expected Results:
"This is the title" shown once with the formatting defined by the style without having to press Enter 


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Version: 6.1.0.0.beta1 (x64)
Build ID: 8c76dfe1284e211954c30f219b3a38dcdd82f8a0
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
Locale: da-DK (da_DK); Calc: CL


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:60.0) Gecko/20100101 Firefox/60.0
Comment 1 Jesper Korsholm Brogaard 2018-06-07 09:29:53 UTC
Created attachment 142582 [details]
Screen recording, showing how to reproduce the error
Comment 2 Dieter 2018-06-07 10:19:59 UTC
I confirm it with

Version: 6.1.0.0.beta1 (x64)
Build ID: 8c76dfe1284e211954c30f219b3a38dcdd82f8a0
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
Locale: en-US (de_DE); Calc: CL

But couldn't reproduce it with

Version: 6.0.4.2 (x64)
Build-ID: 9b0d9b32d5dcda91d2f1a96dc04c645c450872bf
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc: group
Comment 3 Xisco Faulí 2018-06-07 22:06:15 UTC
Regression introduced by:

author	Bjoern Michaelsen <bjoern.michaelsen@libreoffice.org>	2018-05-04 08:44:47 +0200
committer	Björn Michaelsen <bjoern.michaelsen@libreoffice.org>	2018-05-05 08:14:12 +0200
commit 83243003b46dfb258c2b41049b0e1cb82a2d7ddb (patch)
tree 1e9f4fa59e10e7c8ea30fce1bd5c0cb7c37f87cd
parent 0b56585cfc047decf25c648d3cccfc3c7b594a86 (diff)
use WriterMultiListener instead of SwDepend in SwContentNode
- also move SwContentNode and SwTextNode from
  Modify to SwClientNotify
- this removes the last public use of SwDepend, which should now become
  an implementation detail of WriterMultiListener

Bisected with: bibisect-linux64-6.1

Adding Cc: to Bjoern Michaelsen
Comment 4 Dieter 2018-07-19 08:02:04 UTC
*** Bug 118839 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2018-10-15 19:57:31 UTC
Bjoern Michaelsen committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bafd49fb4d72b6dbb10b2fea1386d295dc9d435c

tdf#118049 tdf#118833 tdf#118725: Fix some SwDepend regressions

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2018-10-18 10:02:05 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 5fb66ae5595b7435e8954df31473fad15a74b8c2
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: en-US (ca_ES.UTF-8); Calc: threaded

@Björn, thanks for fixing this!!