tdf#118049 tdf#118833 tdf#118725: Fix some SwDepend regressions

(partial revert/fix of 83243003b46dfb258c2b41049b0e1cb82a2d7ddb)

Change-Id: I96213a41b026ee6496516ad1d0a416c5708a2300